tests/snapshots/run_wpt_conformance__trtx_clamp_float16_4D_tensor_default_options_maxValue_and_specified_negative_options_minValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 4D tensor default options.maxValue and specified negative options.minValue",
    "trtx",
    "PASS",
)
