tests/snapshots/run_wpt_conformance__trtx_clamp_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 0D tensor default options",
    "trtx",
    "PASS",
)
